Responsive view for display area dom; Fixed improper lighting of PASS div on iOS device

--- a/src/main/resources/static/css/production.css
+++ b/src/main/resources/static/css/production.css
@@ -1,5 +1,5 @@
 #display-area {
-    margin: 20px 0;
+    margin: 20px 4px;
     text-align: center;
     border-style: solid;
     border-color: #6f6f6f;
@@ -109,7 +109,7 @@
     margin-right: 5%;
     border-color: green;
     color: green;
-    background: linear-gradient(315deg, transparent 35%, white 50%, transparent 65%) no-repeat;
+    background: linear-gradient(315deg, rgba(255, 255, 255, 0) 35%, white 50%, rgba(255, 255, 255, 0) 65%) no-repeat;
     background-position-x: -320px;
     animation: shine-pass 5s ease-in-out infinite;
 }
